--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: node_js
 node_js:
   - lts/*
-cache: npm
-branches:
-  only:
-    - master
 script:
+  - npm ci
   - npm run test
+  - npx semantic-release
