--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "test-sem-release",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "Testing semantic release for node projects",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/minijus/test-sem-release.git"
+    "url": "https://github.com/minijus/test-sem-release.git"
   },
   "author": "minijus",
   "license": "MIT",
@@ -17,6 +18,17 @@
   },
   "homepage": "https://github.com/minijus/test-sem-release#readme",
   "devDependencies": {
-    "jest": "^24.5.0"
+    "@commitlint/cli": "^7.5.2",
+    "@commitlint/config-conventional": "^7.5.0",
+    "@semantic-release/changelog": "^3.0.2",
+    "@semantic-release/git": "^7.0.8",
+    "husky": "^1.3.1",
+    "jest": "^24.5.0",
+    "semantic-release": "^15.13.3"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
